# phi-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  book.toml
docs/: SUMMARY.md  introduction.md
docs/architecture/: algorithms.md  overview.md
docs/concepts/: agent-loop.md  callbacks.md  compaction.md  composition-i.md  concept-brake.md  context-management.md  context-pruning.md  context-translation.md  debugging.md  evaluational-parallelism.md  focused-compaction.md  messages-events.md  persistence.md  prompt-caching.md  retry.md  sessions.md  skills.md  sub-agents.md  tools.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: configuration.md  mcp.md  openapi.md
docs/providers/: anthropic.md  azure-openai.md  bedrock.md  google.md  openai-compat.md  overview.md
docs/reference/: api.md  configuration.md  glossary.md  tools.md
docs/specs/: architecture.md  bugs.md  compaction-block.md  overview.md  roadmap.md
examples/: basic.rs  callbacks.rs  cli.rs  persistence.rs  sessions.rs  sub_agent.rs
examples/config/: coding_agent.toml  mcp_tools.toml  minimal.json  minimal.toml  minimal.yaml  multi_provider.toml  persistent_session.toml  sub_agents.toml
spec/: architecture.md  overview.md  pseudocode.md  roadmap.md
src/: agent.rs  agent_loop.rs  context.rs  evaluation.rs  lib.rs  session.rs  skills.rs  sub_agent.rs  types.rs
src/agent_loop/: config.rs  core.rs  evaluation.rs  helpers.rs  mod.rs  parallel.rs  run.rs  script_callback.rs  streaming.rs  tools.rs
src/agents/: agent.rs  basic_agent.rs  mod.rs  profile.rs  sub_agent.rs  system_prompt.rs
src/config/: builder.rs  mod.rs  parser.rs  reference.rs  schema.rs
src/context/: compact_messages.rs  compaction.rs  config.rs  execution.rs  mod.rs  orchestration.rs  skills.rs  strategy.rs  tests.rs  token.rs  tracker.rs
src/mcp/: client.rs  mod.rs  tool_adapter.rs  transport.rs  types.rs
src/openapi/: adapter.rs  mod.rs
src/provider/: anthropic.rs  azure_openai.rs  bedrock.rs  context_translation.rs  google.rs  google_vertex.rs  mock.rs  mod.rs  model.rs  openai_compat.rs  openai_responses.rs  registry.rs  retry.rs  sse.rs  traits.rs
tests/: agent_build_config_test.rs  agent_loop_test.rs  agent_test.rs  async_compaction_strategy_test.rs  compaction_test.rs  config_test.rs  context_translation_test.rs  credential_refresh_test.rs  integration_anthropic.rs  openapi_test.rs  prun_test.rs  release_0_10_test.rs  revert_test.rs  script_callback_test.rs  serialization_test.rs  session_store_test.rs  session_test.rs  structured_output_test.rs  sub_agent_test.rs  system_prompt_test.rs  tool_timeout_test.rs  tools_test.rs  turn_request_capture_test.rs
(+55 files in other folders)
