[package]
name = "phi-core"
version = "0.9.0"
edition = "2021"
description = "Simple, effective agent loop with tool execution and event streaming"
license = "MIT"
repository = "https://github.com/LazyBouy/phi-core"
homepage = "https://LazyBouy.github.io/phi-core/"
documentation = "https://LazyBouy.github.io/phi-core/"
readme = "README.md"
keywords = ["agent", "llm", "ai", "tools", "streaming"]
categories = ["api-bindings", "asynchronous"]
authors = ["LazyBouy <LazyBouy@yolog.dev>"]
rust-version = "1.75"
exclude = ["docs/images/*", "docs/theme/*", ".github/*", "scripts/*"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
futures = "0.3"
rand = "0.10.0"
base64 = "0.22"
fs2 = "0.4"
openapiv3 = { version = "2", optional = true }
serde_yaml = "0.9"
toml = "0.8"

[features]
openapi = ["dep:openapiv3"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
wiremock = "0.6"
